--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <p class="text">I LOVE GRADIENTS!</p>
         <p class="text">I LOVE GRADIENTS!</p>
         <p class="text">I LOVE GRADIENTS!</p>
+        <p class="text">I LOVE GRADIENTS!</p>
+        <p class="text">I LOVE GRADIENTS!</p>
+        <p class="text">I LOVE GRADIENTS!</p>
+        <p class="text">I LOVE GRADIENTS!</p>
     </div>
     <script>
         $(function(){
